--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -15,9 +15,9 @@
                 {% if msg %}
                     {{ msg | safe }}
                 {% else %}    
-                Use default credentials: test / ApS12_ZZs8
+                Use default credentials: admin / Admin@123
                 <br />
-                OR <a href={% url 'register' %} >create your own user</a>            
+                OR <a href={% url 'register' %}> create your own user</a>            
                 {% endif %}
             </p>
 
@@ -63,11 +63,13 @@
         <footer>
             <div class="facebook-login">
                 <a  target="_blank"
-                    href="https://appseed.us/admin-dashboards/django-dashboard-light-blue">
-                    <span><i class="fa fa-rocket fa-lg"></i> Django Dashboard Light Blue </span>
+                    href="#">
+                    <span><i class="" aria-hidden="true"></i>Pendare Creations </span>
                 </a>
             </div>
         </footer>
     </section>
+
+
 
 {% endblock content %}
