--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -99,8 +99,8 @@
         <footer>
             <div class="facebook-login">
                 <a  target="_blank" 
-                    href="https://appseed.us/admin-dashboards/django-dashboard-light-blue">
-                    <span><i class="fa fa-rocket fa-lg"></i> Django Dashboard Light Blue</span>
+                    href="#">
+                    <span><i class="#"></i> ꧁Pendare Creations꧂ </span>
                 </a>
             </div>
         </footer>
