--- a/core/templates/layouts/base-fullscreen.html
+++ b/core/templates/layouts/base-fullscreen.html
@@ -1,11 +1,11 @@
-<!-- light-blue - v4.0.1 - 2018-10-31 -->
+
 
 <!DOCTYPE html>
 <html>
 <head>
   
     <title>
-        Django Dashboard Light Blue - {% block title %}{% endblock %} | AppSeed
+        PendareF͜͡amily - {% block title %}{% endblock %} | India
     </title>
 
     <link href="/static/assets/css/application.css" rel="stylesheet">
