--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -1,5 +1,5 @@
 
-    <footer class="content-footer">
-        &copy; Flatlogic - 
-        <a target="_blank" href="https://appseed.us/admin-dashboards/django-dashboard-light-blue">Django Dashboard Light Blue</a> provided by AppSeed.
+    <footer class="content-footer"> Powered by
+        &copy; 
+        <a target="_blank" href="#">Pendare Creations</a> 
     </footer>
