--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -10,6 +10,12 @@
         <li class="">
             <a href="/tables.html"><i class="fa fa-table"></i> Tables</a></li>
         </li>
+            
+
+            <li class="">
+            <a href="{% url 'post_new' %}"><i class="fa fa-edit"></i>Post</a></li>
+        </li>
+
         <li class="">
             <a href="/notifications.html"><i class="fa fa-bell"></i> Notifications</a></li>
         </li>
