--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -1,11 +1,11 @@
-<!-- light-blue - v4.0.1 - 2018-10-31 -->
+
 
 <!DOCTYPE html>
 <html>
 <head>
   
     <title>
-        Django Dashboard Light Blue - {% block title %}{% endblock %} | AppSeed
+      PendareF͜͡amily {% block title %}{% endblock %} | India 
     </title>
 
     <link href="/static/assets/css/application.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 <body>
 
     <div class="logo">
-        <h4><a href="/">Light <strong>Blue</strong></a></h4>
+        <h4><a href="/">꧁Pendare  <strong>Creations꧂</strong></a></h4>
     </div>
 
     {% include 'includes/sidebar.html' %}
