--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -100,7 +100,7 @@
             <div class="facebook-login">
                 <a  target="_blank" 
                     href="#">
-                    <span><i class="#"></i> ꧁Pendare Creations꧂ </span>
+                    <span><i class="#"></i>Pendare Creations</span>
                 </a>
             </div>
         </footer>
