--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -15,6 +15,9 @@
             <li class="">
             <a href="{% url 'post_new' %}"><i class="fa fa-edit"></i>Post</a></li>
         </li>
+            <li class="">
+            <a href="{% url 'post_view' %}"><i class="fa fa-user"></i>All Posts</a></li>
+        </li>
 
         <li class="">
             <a href="/notifications.html"><i class="fa fa-bell"></i> Notifications</a></li>
