--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block title %} Dashboard {% endblock %} 
-
+ 
 {% block content %}
 
     <h2 class="page-title">Dashboard <small>Statistics and more</small></h2>
@@ -654,4 +654,9 @@
         </div>
     </script>
 
+    <script> 
+        function Previous() { 
+            window.history.back('index') 
+        } 
+    </script>
 {% endblock javascripts %}
