--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -10,17 +10,20 @@
         <li class="">
             <a href="/tables.html"><i class="fa fa-table"></i> Tables</a></li>
         </li>
-            
+              
 
             <li class="">
             <a href="{% url 'post_new' %}"><i class="fa fa-edit"></i>Post</a></li>
         </li>
             <li class="">
-            <a href="{% url 'post_view' %}"><i class="fa fa-user"></i>All Posts</a></li>
+            <a href="{% url 'post_view' %}"><i class="fa fa-eye"></i>All Posts</a></li>
         </li>
 
         <li class="">
             <a href="/notifications.html"><i class="fa fa-bell"></i> Notifications</a></li>
+        </li>
+        <li class="">
+            <a href="#"><i class="fa fa-image"></i> Gallary</a></li>
         </li>
         <li class="panel ">
             <a class="accordion-toggle collapsed" data-toggle="collapse"
