--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -3,24 +3,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+
     <title>
       PendareF͜͡amily {% block title %}{% endblock %} | India 
     </title>
 
     <link href="/static/assets/css/application.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/assets/img/favicon.png">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/static/assets/css/application.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/static/assets/img/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta charset="utf-8">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <script>
         /* yeah we need this empty stylesheet here. It's cool chrome & chromium fix
            chrome fix https://code.google.com/p/chromium/issues/detail?id=167083
                       https://code.google.com/p/chromium/issues/detail?id=332189
         */
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- Specific Page CSS goes HERE  -->
     {% block stylesheets %}{% endblock stylesheets %}
